# LAPJV-algorithm-c

./: .gitignore  CMakeLists.txt  README.md  readme.txt  readme.txt~
LAPJV/: lap.cpp  lap.h
cmake/: CPM.cmake  tools.cmake
src/: gnrl.h  lap.cpp  lap.h
